--- a/aov/src/pages/Layout/Lineup/LineupRed.css
+++ b/aov/src/pages/Layout/Lineup/LineupRed.css
@@ -1,34 +1,34 @@
 :root
 {
-    --bg-width: 20vh; 
-    --bg-height: 20vh;
-    --logo-width: 20vh; /*80vw 150px*/
-    --logo-height: 20vh; /*80vh 150px*/
-    --trans: 0.5s ease-in-out;
-    --img-width: 652px;
-    --img-height: 813px;
-    --line-color: #FFC502;
-    --opacity: 0%;
-    --left-1: -500px;
-    --left-2: -500px;
-    --left-3: -500px;
-    --left-4: -500px;
-    --left-5: -500px;
-    --flex-1: 1;
-    --flex-2: 1;
-    --flex-3: 1;
-    --flex-4: 1;
-    --flex-5: 1;
-    --pos-name1: 0px;
-    --pos-name2: 0px;
-    --pos-name3: 0px;
-    --pos-name4: 0px;
-    --pos-name5: 0px;
-    --flex-name-1: 0;
-    --flex-name-2: 0;
-    --flex-name-3: 0;
-    --flex-name-4: 0;
-    --flex-name-5: 0;
+    --bg-width-red: 20vh; 
+    --bg-height-red: 20vh;
+    --logo-width-red: 20vh; /*80vw 150px*/
+    --logo-height-red: 20vh; /*80vh 150px*/
+    --trans-red: 0.5s ease-in-out;
+    --img-width-red: 652px;
+    --img-height-red: 813px;
+    --line-color-red: #FFC502;
+    --opacity-red: 0%;
+    --left-1-red: -500px;
+    --left-2-red: -500px;
+    --left-3-red: -500px;
+    --left-4-red: -500px;
+    --left-5-red: -500px;
+    --flex-1-red: 1;
+    --flex-2-red: 1;
+    --flex-3-red: 1;
+    --flex-4-red: 1;
+    --flex-5-red: 1;
+    --pos-name1-red: 0px;
+    --pos-name2-red: 0px;
+    --pos-name3-red: 0px;
+    --pos-name4-red: 0px;
+    --pos-name5-red: 0px;
+    --flex-name-1-red: 0;
+    --flex-name-2-red: 0;
+    --flex-name-3-red: 0;
+    --flex-name-4-red: 0;
+    --flex-name-5-red: 0;
 }
 
 #lineup-red-master
@@ -38,21 +38,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: var(--opacity);
+    opacity: var(--opacity-red);
     transition: 0.5s ease-in-out;
 
 }
 #background-red
 {
-    width: var(--bg-width);
-    height: var(--bg-height);
+    width: var(--bg-width-red);
+    height: var(--bg-height-red);
     position: relative;
     overflow: hidden;
     background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: var(--trans);
+    transition: var(--trans-red);
 }
 #background-red::after
 {
@@ -73,16 +73,16 @@
 
 #lineup-red-ctn
 {
-    width: calc(var(--bg-width) - 8px);
-    height: calc(var(--bg-height) - 8px);
+    width: calc(var(--bg-width-red) - 8px);
+    height: calc(var(--bg-height-red) - 8px);
     background: black;
-    transition: var(--trans);
+    transition: var(--trans-red);
     position: relative;
 }
 .logo-team-red
 {
-    width: var(--logo-height);
-    height: var(--logo-height);
+    width: var(--logo-height-red);
+    height: var(--logo-height-red);
     transition: 0.5s ease-in-out;
     overflow: hidden;
 }
@@ -91,27 +91,27 @@
     position: absolute;
     left: 0px;
     top: 0px;
-    width: var(--logo-width);
-    height: var(--logo-height);
+    width: var(--logo-width-red);
+    height: var(--logo-height-red);
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(1,98,249);
     transition: 0.5s ease-in-out;
     z-index: 999;
-    transition: var(--trans);
+    transition: var(--trans-red);
 
 }
 #team-red-name-tab
 {
     width: 100%;
-    height: var(--logo-height);
+    height: var(--logo-height-red);
     position: relative;
-    padding-left: var(--logo-height);
+    padding-left: var(--logo-height-red);
     color: white;
     font-size: 130px;
     text-indent: 40px;
-    line-height: var(--logo-height);
+    line-height: var(--logo-height-red);
     font-family: 'SVN-Engine';
     background: url(../img/pttn1.png) center right/ 70% no-repeat;
     background-color: #383837;
@@ -133,8 +133,8 @@
 {
     width: 100%;
     height: 25px;
-    background-color: var(--line-color);
-    transition: var(--trans);
+    background-color: var(--line-color-red);
+    transition: var(--trans-red);
 
 }
 #player-red-ctn
@@ -143,8 +143,8 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    background-color: var(--line-color);
-    transition: var(--trans);
+    background-color: var(--line-color-red);
+    transition: var(--trans-red);
 
 }
 .player-red-lineup-style
@@ -155,7 +155,7 @@
     margin: 0px 1px;
     transition: 0.5s ease-in-out;
     overflow: hidden;
-    transition: var(--trans);
+    transition: var(--trans-red);
 
 }
 .player-red-lineup-style::after
@@ -184,12 +184,12 @@
 }
 .player-red-lineup-img
 {
-    width: calc(var(--img-width)*1.2);
-    height: calc(var(--img-height)*1.2);
+    width: calc(var(--img-width-red)*1.2);
+    height: calc(var(--img-height-red)*1.2);
     position: absolute;
     right: -220px;
     z-index: 2;
-    transition: var(--trans);
+    transition: var(--trans-red);
 
 }
 
@@ -200,7 +200,7 @@
     width: 100%;
     height: 80px;
     z-index: 4;
-    transition: var(--trans);
+    transition: var(--trans-red);
 
 }
 .player_lineup-red-tabname::before
@@ -212,7 +212,7 @@
     clip-path: polygon(0 0, 100% 0%, 92% 100%, 0% 100%);
     background: white;
     z-index: 3;
-    transition: var(--trans);
+    transition: var(--trans-red);
 
 }
 .player_lineup-red-playername
@@ -394,70 +394,70 @@
 .onOff-red1
 {
     position: relative;
-    left: var(--left-1);
+    left: var(--left-1-red);
 }
 .onOff-red2
 {
     position: relative;
-    left: var(--left-2);
+    left: var(--left-2-red);
 }
 .onOff-red3
 {
     position: relative;
-    left: var(--left-3);
+    left: var(--left-3-red);
 }
 .onOff-red4
 {
     position: relative;
-    left: var(--left-4);
+    left: var(--left-4-red);
 }
 .onOff-red5
 {
     position: relative;
-    left: var(--left-5);
+    left: var(--left-5-red);
 }
 #player-lineup-red-1
 {
-    flex: var(--flex-1);
+    flex: var(--flex-1-red);
 }
 #player-lineup-red-2
 {
-    flex: var(--flex-2);
+    flex: var(--flex-2-red);
 }
 #player-lineup-red-3
 {
-    flex: var(--flex-3);
+    flex: var(--flex-3-red);
 }
 #player-lineup-red-4
 {
-    flex: var(--flex-4);
+    flex: var(--flex-4-red);
 }
 #player-lineup-red-5
 {
-    flex: var(--flex-5);
+    flex: var(--flex-5-red);
 }
 #player_lineup-red-playername-1
 {
-    width: var(--pos-name1);
-    flex: var(--flex-name-1);
+    width: var(--pos-name1-red);
+    flex: var(--flex-name-1-red);
 }
 #player_lineup-red-playername-2
 {
-    width: var(--pos-name2);
-    flex: var(--flex-name-2);
+    width: var(--pos-name2-red);
+    flex: var(--flex-name-2-red);
 }
 #player_lineup-red-playername-3
 {
-    width: var(--pos-name3);
-    flex: var(--flex-name-3);
+    width: var(--pos-name3-red);
+    flex: var(--flex-name-3-red);
 }
 #player_lineup-red-playername-4
 {
-    width: var(--pos-name4);
-    flex: var(--flex-name-4);
+    width: var(--pos-name4-red);
+    flex: var(--flex-name-4-red);
 }
 #player_lineup-red-playername-5
 {
-    width: var(--pos-name5);
-    flex: var(--flex-name-5);
+    width: var(--pos-name5-red);
+    flex: var(--flex-name-5-red);
 }
