--- a/aov/src/pages/Layout/Lineup/LineupBlue.css
+++ b/aov/src/pages/Layout/Lineup/LineupBlue.css
@@ -357,10 +357,26 @@
     letter-spacing: -4px;
     transition: 0.5s ease-in-out;
 }
-.player_lineup_KDA-blue::before,
-.player_lineup_MVP-blue::before
+.player_lineup_KDA-blue::before
 {
     content: 'AVG KDA';
+    position: absolute;
+    text-align: center;
+    width: 200px;
+    height: 40px;
+    background: white;
+    color: black;
+    font-size: 40px;
+    line-height: 40px;
+    letter-spacing: 0px;
+    font-family: 'SVN-Engine';
+    font-style: italic;
+    transition: 0.5s ease-in-out;
+    clip-path: polygon(0 0, 100% 0%, 95% 100%, 0% 100%);
+}
+.player_lineup_MVP-blue::before
+{
+    content: 'AVG MVP';
     position: absolute;
     text-align: center;
     width: 200px;
