--- a/aov/src/pages/Layout/Lineup/LineupNew.css
+++ b/aov/src/pages/Layout/Lineup/LineupNew.css
@@ -9,6 +9,7 @@
     width: 1920px;
     height: 1080px;
     position: relative;
+    opacity: 0%;
     background: url(./Background.png) center / cover no-repeat;
 }
 #ptt-background-new
