--- a/fco/src/pages/Layout/Lineup/LineupNew.css
+++ b/fco/src/pages/Layout/Lineup/LineupNew.css
@@ -2,41 +2,123 @@
 {
     --bg-width: 20vh; 
     --opacity: 100%;
+    --pos-l-ctn: 0px;
+    --pos-r-ctn: 0px;
+    --trans: 0.5s ease-in-out;
+    --logo-master-main: 150px;
+    --logo-master-top: 10%;
+    --logo-master-right: 90px;
+    --bottom-ptt: 0px;
+    --logo-team-height: 500px;
+    --logo-team-top: 50%;
+    --logo-team-left: 50%;
 }
-
-#lineup-master-new
-{
-    width: 1920px;
-    height: 1080px;
+#lineup-master{
+    width: 100vw;
+    height: 100vh;
     position: relative;
-    opacity: var(--opacity);
-    background: url(./Background.png) center / cover no-repeat;
+    display: flex;
+    overflow: hidden;
 }
-#ptt-background-new
-{
-    width: 1920px;
-    height: 1080px;
+.side-ctn {
+    width: 50%;
+    height: 100%;
     position: relative;
-    left: 350px;
-    background: url(./logoMain.png) center left / contain no-repeat;
-    animation: logoShadow 5s ease-in-out infinite;
+    display: flex;
 }
-@keyframes logoShadow{
-    0%,100% {opacity: 10%;}
-    50% {opacity: 50%;}
-}
-
-/* #map-team-new
-{
-    width: 1920px;
-    height: 1080px;
+/* .side-ctn::after {
+    content: "";
+    width: 100%;
+    height: 100%;
     position: absolute;
-    left: 100px;
-    top: 0px;
-    background: url(./map1.png) center left / contain no-repeat;
-    transform:
-    perspective(1000px)
-    translate3d(0px, 0px, -1250px)
-    rotateX(27deg)
-    scale(0.9, 0.9);
+    background-color: black;
+    opacity: 50%;
+    z-index: 0;
 } */
+#ctn-right {
+    top: var(--pos-r-ctn);
+    background: url('./bg.png') right/ cover no-repeat;
+    transition: var(--trans);
+    z-index: -999;
+}
+#ctn-left {
+    bottom: var(--pos-l-ctn);
+    background: url('./bg.png') left/ cover no-repeat;
+    transition: var(--trans);
+    z-index: -999;
+}
+
+/* logo */
+#logo-fco {
+    width: var(--logo-master-main);
+    height: var(--logo-master-main);
+    background: url('./FCOLogo.png') center / contain no-repeat;
+    z-index: 999;
+    position: absolute;
+    top: var(--logo-master-top);
+    right: var(--logo-master-right);
+    transform: translate(50%, -50%);
+    transition: var(--trans);
+}
+#logo-league {
+    width: var(--logo-master-main);
+    height: var(--logo-master-main);
+    background: url('./FVPL.png') center / contain no-repeat;
+    z-index: 999;
+    position: absolute;
+    top: var(--logo-master-top);
+    left: var(--logo-master-right);
+    transform: translate(-50%, -50%);
+    transition: var(--trans);
+}
+.black-bg{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 50%;
+    position: absolute;
+    z-index: 1;
+}
+#bottom-ptt {
+    position: absolute;
+    bottom: var(--bottom-ptt);
+    background: url(./bottom.png)center / contain no-repeat;
+    width: 100%;
+    height: 162px;
+}
+.logo-team {
+    position: absolute;
+    z-index: 999;
+    height: var(--logo-team-height);
+    background-color: white;
+    transition: var(--trans);
+}
+#logo-team-right-ctn {
+    top: var(--logo-team-top);
+    right: var(--logo-team-left);
+    transform: translate(50%, -50%);
+    transition: var(--trans);
+}
+#logo-team-left-ctn {
+    top: var(--logo-team-top);
+    left: var(--logo-team-left);
+    transform: translate(-50%, -50%);
+    transition: var(--trans);
+}
+.logo-team-ctn {
+    display: flex;
+    width: var(--logo-team-height);
+    height: var(--logo-team-height);
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    transition: var(--trans);
+}
+.logo-team-ctn::after{
+    content: "";
+    width: calc(var(--logo-team-height) + 5px);
+    height: calc(var(--logo-team-height) + 5px);
+    position: absolute;
+    background-color: red;
+}
