--- a/fco/src/pages/Layout/Lineup/LineupNew.css
+++ b/fco/src/pages/Layout/Lineup/LineupNew.css
@@ -35,6 +35,7 @@
     position: relative;
     display: flex;
     overflow: hidden;
+    box-sizing: border-box;
 }
 .side-ctn {
     width: 50%;
@@ -107,7 +108,7 @@
     position: absolute;
     z-index: 999;
     height: var(--logo-team-height);
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255,0.8);
     transition: var(--trans);
     border: 1px solid;
     border-image-slice: 1;
@@ -159,14 +160,22 @@
 }
 #team-name-text-left{
     text-align: left;
+    border-top: 1px  solid;
+    border-bottom: 1px  solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to right,rgba(0,0,0,0), #6a5af9, #f62682,rgba(0,0,0,0),rgba(0,0,0,0));
 }
 #team-name-text-right{
     text-align: right;
+    border-top: 1px  solid;
+    border-bottom: 1px  solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to left,rgba(0,0,0,0), #6a5af9, #f62682,rgba(0,0,0,0),rgba(0,0,0,0));
 }
 #team-name-text-left-ctn{
     width: var(--team-text-width);
     height: var(--team-text-height);
-    background: linear-gradient(90deg ,rgb(255, 0, 0,0.8), rgb(255, 0, 0,0.8) , rgba(0,0,0,0));
+    background: linear-gradient(90deg ,#f62682, rgba(0,0,0,0));
     z-index: 998;
     transform: translate(52%, -50%);
     justify-content: center;
@@ -176,7 +185,7 @@
 #team-name-text-right-ctn{
     width: var(--team-text-width);
     height: var(--team-text-height);
-    background: linear-gradient(-90deg ,rgb(0, 0, 255,0.8), rgb(0, 0, 255,0.8) , rgba(0,0,0,0));
+    background: linear-gradient(-90deg ,#6a5af9 , rgba(0,0,0,0));
     z-index: 998;
     transform: translate(47%, -50%);
     justify-content: center;
@@ -193,14 +202,13 @@
 .short-name-text {
     position: relative;
     width: 250px;
-    height: 70px;
-    font-size: 60px;
-    line-height: 60px;
+    height: 105px;
+    font-size: 110px;
+    line-height: 110px;
     opacity: var(--team-text-opacity);
     color: white;
     z-index: 998;
-    padding: 0px 15px;
-    margin: 5px 15px;
+    margin: 0px 15px;
 }
 #shot-name-right{
     text-align: right;
@@ -210,7 +218,7 @@
     text-align: left;
     border-radius: 15px;
 }
-#shot-name-left::after {
+/* #shot-name-left::after {
     content: '';
     position: absolute;
     background: linear-gradient(90deg,rgb(255, 255, 255,0.5),rgba(0,0,0,0));
@@ -219,8 +227,8 @@
     height: 60px;
     left: 0px;
     animation: gbtext 3s ease-in-out infinite;
-}
-#shot-name-right::after {
+} */
+/* #shot-name-right::after {
     content: '';
     position: absolute;
     background: linear-gradient(-90deg,rgb(255, 255, 255,0.5),rgba(0,0,0,0));
@@ -229,7 +237,7 @@
     height: 60px;
     left: 0px;
     animation: gbtext 3s ease-in-out infinite;
-}
+} */
 @keyframes gbtext {
     0%, 100%{
         opacity: 0.2;
@@ -242,7 +250,7 @@
 .team-lineup{
     position: relative;
     width: 100%;
-    height: 50px;
+    height: 25px;
     font-size: 25px;
     line-height: 25px;
     color: white;
@@ -271,6 +279,7 @@
     color: white;
     list-style: none;
     margin: 0px 10px;
+    text-transform: uppercase;
 }
 #game-right-ctn{
     position: absolute;
@@ -339,6 +348,7 @@
     width: 500px;
     transform: translate(-50%,0%);
     transition: var(--trans);
+    z-index: 998;
 }
 .game-box-playername{
     position: absolute;
@@ -356,4 +366,112 @@
 }
 #game-box-1{
     flex: 1;
+}
+.scroll-main-text-loops{
+    white-space: nowrap;
+    width: 800%;
+    height: 90px;
+    rotate: 90deg;
+    font-size: 85px;
+    line-height: 85px;
+    left: -880px;
+    opacity: 0.1;
+    position: relative;
+    transition: var(--trans);
+    animation: move-top-to-bottom 30s infinite linear;
+}
+.scroll-text-loops{
+    width: fit-content;
+    white-space: nowrap;
+    width: 800%;
+    rotate: 90deg;
+    font-size: 85px;
+    line-height: 85px;
+    opacity: 0.1;
+    position: relative;
+    left: -710px;
+    transition: var(--trans);
+    animation: move-bottom-to-top 30s infinite linear;
+}
+@keyframes move-top-to-bottom {
+    from {
+        transform: translateX(-50%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+@keyframes move-bottom-to-top {
+    from {
+        transform: translateX(0%);
+    }
+    to {
+        transform: translateX(-50%);
+    }
+}
+.text-ctn{
+    width: 100%;
+    height: 100%;
+}
+#match-info-ctn{
+    position: absolute;
+    width: 400px;
+    height: 500px;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%,-50%);
+    transition: var(--trans);
+    background-color: rgba(0, 0, 0,0.3);
+}
+#headline-match{
+    color: white;
+    text-align: center;
+    font-size: 65px;
+    height: 100px;
+    line-height: 100px;
+}
+.arrow{
+    width: 50px;
+    height: 100px;
+    position: absolute;
+    top: 0px;
+}
+#arrow-left{
+    clip-path: polygon(15% 50%, 90% 70%, 90% 30%);
+    background-color: #f62682;
+    rotate: 180deg;
+    left: 20px;
+    transition: var(--trans);
+    animation: trans-arrow-left 1s linear infinite;
+}
+@keyframes trans-arrow-left {
+    0%,100%{
+        left: 15px;
+    }
+    50%{
+        left: 20px;
+    }
+}
+#arrow-right{
+    clip-path: polygon(15% 50%, 90% 70%, 90% 30%);
+    background-color: #6a5af9;
+    right: 20px;
+    top: 0px;
+    transition: var(--trans);
+    animation: trans-arrow-right 1s linear infinite;
+}
+@keyframes trans-arrow-right {
+    0%,100%{
+        right: 20px;
+    }
+    50%{
+        right: 15px;
+    }
+}
+#match-text-ctn{
+    position: relative;
+}
+#game-text-ctn{
+    width: 100%;
+    height: 400px;
 }
